--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -44,20 +44,20 @@
 @import "modules/audioRecord";
 @import "modules/RAcolor";
 
-@import "pages/index";//done
-@import "pages/account-teacher";//done
-@import "pages/account-class";//done
-@import "pages/account-student";//done
+@import "pages/index";
+@import "pages/account-teacher";
+@import "pages/account-class";
+@import "pages/account-student";
 
-@import "pages/DACC-session";//done
-@import "pages/DACC-classScore";//done
+@import "pages/DACC-session";
+@import "pages/DACC-classScore";
 @import "pages/DACC-statistics";
 @import "pages/DACC-schoolReport";
 
 
-@import "pages/RP-bookList";//done
-@import "pages/RP-quiz";//done
-@import "pages/RP-manage";//done
-@import "pages/RP-skill";//ing
-//@import "pages/RP-courseActivity";
+@import "pages/RP-bookList";
+@import "pages/RP-quiz";
+@import "pages/RP-manage";
+@import "pages/RP-skill";
+@import "pages/RP-courseActivity";
 
