--- a/SRteacher/Content/scss/mend/_forms.scss
+++ b/SRteacher/Content/scss/mend/_forms.scss
@@ -235,76 +235,64 @@ input:-internal-autofill-selected {
 
 //自製 讚
 .form-check-thumb {
-	display: flex;
-	align-items: center;
-	&.form-check-inline{
-		display: inline-flex;	
-	}
 	.form-check-input {
-		width: 26px;
-		height: 27px;
-		margin-top: 0;
-		vertical-align: middle;
-		background-color: transparent;
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: contain;
-		border: none;
-		appearance: none;
-		print-color-adjust: exact;
-		background-image: url("../images/icon-thumbs.png");
+    flex-shrink: 0;
+    width: 1.6875em;
+    height: 1.6875em;
+    margin-top: 0;
+    vertical-align: top;
+    appearance: none;
+    background-color: transparent;
+    background-image: url("../images/icon-thumbs.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: 0;
+    print-color-adjust: exact;
 		margin-right: .25rem;
+		cursor: pointer;
+		&:checked{
+			background-image: url("../images/icon-thumbs-fill.png");
+		}
+		&:focus {
+			border-color: none;
+			outline: 0;
+			box-shadow: none;
+		}
 	}
-	.form-check-input:checked{
-		background-image: url("../images/icon-thumbs-fill.png");
-	}
-	.form-check-input:focus {
-		border-color: none;
-		outline: 0;
-		box-shadow: none;
-	}
-	.form-check-label {
-		line-height: 27px;	
-	}
-	&.form-check-inline .form-check-label {
+	.form-check-label{
 		margin-right: 0;
 	}
 }
 
 //自製 回饋
 .form-check-feedback {
-	display: flex;
-	align-items: center;
-	&.form-check-inline{
-		display: inline-flex;	
-	}
 	.form-check-input {
-		width: 29px;
-		height: 26px;
-		margin-top: 0;
-		vertical-align: middle;
-		background-color: transparent;
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: contain;
-		border: none;
-		appearance: none;
-		print-color-adjust: exact;
-		background-image: url("../images/icon-comment.png");
+    flex-shrink: 0;
+    width: 1.6875em;
+    height: 1.6875em;
+    margin-top: 0;
+    vertical-align: top;
+    appearance: none;
+    background-color: transparent;
+    background-image: url("../images/icon-comment.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: 0;
+    print-color-adjust: exact;
 		margin-right: .25rem;
+		cursor: pointer;
+		&:checked{
+			background-image: url("../images/icon-comment-fill.png");
+		}
+		&:focus {
+			border-color: none;
+			outline: 0;
+			box-shadow: none;
+		}
 	}
-	.form-check-input:checked{
-		background-image: url("../images/icon-comment-fill.png");
-	}
-	.form-check-input:focus {
-		border-color: none;
-		outline: 0;
-		box-shadow: none;
-	}
-	.form-check-label {
-		line-height: 26px;	
-	}
-	&.form-check-inline .form-check-label {
+	.form-check-label{
 		margin-right: 0;
 	}
 }
