--- a/SRteacher/Content/scss/pages/_RP-courseActivity.scss
+++ b/SRteacher/Content/scss/pages/_RP-courseActivity.scss
@@ -10,7 +10,7 @@
 				&.col-topicType		{ width: 9.5%;  }
 				&.col-scroeComp		{ width: 10%;		}
 				&.col-likeCmt			{ width: 10%;		}
-				&.col-tools				{ width: 25%;		}	
+				&.col-tool				{ width: 25%;		}	
 			}
 		}
 	}
