--- a/SRteacher/Content/scss/pages/_DACC-schoolReport.scss
+++ b/SRteacher/Content/scss/pages/_DACC-schoolReport.scss
@@ -114,7 +114,7 @@
     > tbody{
         > tr{
             >th, >td {
-                &.col-name { 
+                &.col-standardName { 
                     >small{
                         font-size: 1em;
                         margin-left: .25em; 
@@ -152,7 +152,7 @@
     }
 }
 .table-studentList{
-    table-layout: fixed; 
+	table-layout: fixed; 
 }
 
 .chartBg-label{
