--- a/SRteacher/Content/scss/pages/_DACC-session.scss
+++ b/SRteacher/Content/scss/pages/_DACC-session.scss
@@ -2,14 +2,14 @@
     > thead, > tbody{
         > tr{
             >th, > td {
-                &.col-no				{ width:  4%; }
+                &.col-index				{ width:  4%; }
                 &.col-session		{ width: 12%; }
                 &.col-remark		{ width: 12%; }
                 &.col-startTime { width: 16%; }
                 &.col-endTime		{ width: 16%; }
                 &.col-testNum		{ width:  8%; }
                 &.col-doneNum		{ width:  8%; }
-                &.col-tools			{ width: 14%; }
+                &.col-tool			{ width: 14%; }
                 &.col-state			{ width: 10%; }
             }   
         }
@@ -31,13 +31,13 @@
     > thead, > tbody{
         > tr{
             >th, > td {
-                  &.col-no			{ width:   8%; }
-                  &.col-grade		{ width:  10%; }
-                  &.col-class		{ width:  12%; }
-                  &.col-Cname		{ width:  13%; }
-                  &.col-Sid			{ width:  13%; }
-                  &.col-account	{	width:  34%; }  
-                  &.col-state		{ width:  10%; } 
+                  &.col-index					{ width:   8%; }
+                  &.col-grade					{ width:  10%; }
+                  &.col-class					{ width:  12%; }
+                  &.col-studentName		{ width:  13%; }
+                  &.col-Sid						{ width:  13%; }
+                  &.col-account				{	width:  34%; }  
+                  &.col-state					{ width:  10%; } 
             }
         }
     }
@@ -50,8 +50,8 @@
         > tr{
             >th, > td {
                   &.col-classCheck	{	width:  25%; }
-                  &.col-Cname				{ width:  17%; }
-                  &.col-Sid					{ width:  15%; }
+                  &.col-studentName	{ width:  17%; }
+                  &.col-studentId		{ width:  15%; }
                   &.col-account			{ width:  43%; }  
             }
         }
