--- a/SRteacher/Content/scss/bootstrap-5.3.8/_variables-custom.scss
+++ b/SRteacher/Content/scss/bootstrap-5.3.8/_variables-custom.scss
@@ -1456,7 +1456,7 @@ $accordion-button-focus-border-color:     $input-focus-border-color !default; //
 $accordion-button-focus-box-shadow:       $btn-focus-box-shadow !default;
 
 $accordion-icon-width:                    1.0em !default;//cg. 1.25rem !default;
-$accordion-icon-color:                    $body-color !default;
+$accordion-icon-color:                    currentcolor !default; //$body-color !default;
 $accordion-icon-active-color:             $primary-text-emphasis !default;
 $accordion-icon-transition:               transform .2s ease-in-out !default;
 $accordion-icon-transform:                rotate(-180deg) !default;
